<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rexpax.ui.fragment.SuccesfulRegistrationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congrat_text"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="50dp"/>

        <ImageView
            android:id="@+id/register_img"
            android:layout_width="match_parent"
            android:layout_height="170dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_steps_registration"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/next_for_four_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/next_register_btn"/>
    </LinearLayout>

    <Button
        android:id="@+id/skip_btn_register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/skip_register_btn"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>
