<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rexpax.ui.fragment.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_registration_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_data_text"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"/>

               <include
                   android:id="@+id/email_registration_field"
                   layout="@layout/edit_text_registration_field"/>

                <include
                    android:id="@+id/password_registration_field"
                    layout="@layout/edit_text_registration_field"/>

                <include
                    android:id="@+id/name_registration_field"
                    layout="@layout/edit_text_registration_field"/>

                <include
                    android:id="@+id/last_name_registration_field"
                    layout="@layout/edit_text_registration_field"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/required_star_registration_field"
                    android:text="@string/required_star_text"
                    android:textColor="@android:color/holo_red_dark"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/man_radio_bt"/>

                    <RadioButton
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/woman_radio_btn"/>

                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/age_registration_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_conditions_first_part"/>

                <TextView
                    android:id="@+id/privacy_police_text"
                    android:text="@string/privacy_policy"
                    android:paddingLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/busines_account_text"/>

            <Button
                android:id="@+id/register_btn_reg_frag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_btn_text"
                android:layout_margin="30dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/registration_footer_text"
                android:maxLines="2"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
