<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.rexpax.ui.fragment.LoginFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login_to_account_text"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/forgot_password_text"
            android:text="@string/forgot_password_text"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/start_link_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/enter_btn_login_frag"
            android:text="@string/enter_btn_login_text"
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/or_text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/dont_have_an_account"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@android:color/black"/>

        </LinearLayout>

        <Button
            android:id="@+id/registration_btn_login_frag"
            android:text="@string/registration_btn_login_text"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
